Fixed sidebar overflow issue

--- a/wp-content/themes/danfair_v1/style.less
+++ b/wp-content/themes/danfair_v1/style.less
@@ -1384,6 +1384,10 @@ footer {
             display: inline;
             max-width: 50%;
         }
+
+    .about-section__quick-facts {
+        overflow: auto;
+    }
 }
 
 @media (max-width: 600px) {
@@ -1517,10 +1521,6 @@ footer {
 
     .portfolio__project__text p:first-of-type {
         clear: both;
-    }
-
-    .portfolio__project__buttons {
-        // text-align: left;
     }
 
     .sidebar > div {
